--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -66,20 +66,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_up(s):\n",
-    "    \"\"\"\n",
-    "    Cleans up numbers, URLs, and special characters from a string.\n",
+    "# import libraries\n",
     "\n",
-    "    Args:\n",
-    "        s: The string to be cleaned up.\n",
+    "import re\n",
+    "import nltk\n",
     "\n",
-    "    Returns:\n",
-    "        A string that has been cleaned up.\n",
-    "    \"\"\""
+    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
+    "from nltk.corpus import stopwords\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ironhack s q website is\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clean_up(text):\n",
+    "    text = re.sub(r'\\b(?:https?|ftp)://\\S+', '', text)\n",
+    "    text = re.sub(r'[^A-Za-z\\s]', ' ', text).lower()\n",
+    "    text = re.sub(r'\\s+', ' ', text).strip()\n",
+    "    return text\n",
+    "\n",
+    "original_text = \"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\"\n",
+    "cleaned_text = clean_up(original_text)\n",
+    "\n",
+    "print(cleaned_text)\n"
    ]
   },
   {
@@ -101,20 +124,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 's', 'q', 'website', 'is']\n"
+     ]
+    }
+   ],
    "source": [
-    "def tokenize(s):\n",
-    "    \"\"\"\n",
-    "    Tokenize a string.\n",
+    "def tokenize(text):\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "    return tokens\n",
     "\n",
-    "    Args:\n",
-    "        s: String to be tokenized.\n",
+    "tokenized_text = tokenize(cleaned_text)\n",
     "\n",
-    "    Returns:\n",
-    "        A list of words as the result of tokenization.\n",
-    "    \"\"\""
+    "print(tokenized_text)"
    ]
   },
   {
@@ -145,20 +173,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 's', 'q', 'websit', 'is']\n"
+     ]
+    }
+   ],
    "source": [
-    "def stem_and_lemmatize(l):\n",
-    "    \"\"\"\n",
-    "    Perform stemming and lemmatization on a list of words.\n",
+    "def stem_and_lemmatize(words):\n",
     "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
+    "    stemmer = PorterStemmer()\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    stemmed_and_lemmatized = [lemmatizer.lemmatize(stemmer.stem(word)) for word in words]\n",
     "\n",
-    "    Returns:\n",
-    "        A list of strings after being stemmed and lemmatized.\n",
-    "    \"\"\""
+    "    return stemmed_and_lemmatized\n",
+    "\n",
+    "stemmed_and_lemmatized_text = stem_and_lemmatize(tokenized_text)\n",
+    "\n",
+    "print(stemmed_and_lemmatized_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: ironhack, Processed: ironhack\n",
+      "Original: s, Processed: s\n",
+      "Original: q, Processed: q\n",
+      "Original: website, Processed: websit\n",
+      "Original: is, Processed: is\n"
+     ]
+    }
+   ],
+   "source": [
+    "for original, processed in zip(tokenized_text, stemmed_and_lemmatized_text):\n",
+    "    print(f\"Original: {original}, Processed: {processed}\")"
    ]
   },
   {
@@ -176,20 +235,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'q', 'websit']\n"
+     ]
+    }
+   ],
    "source": [
-    "def remove_stopwords(l):\n",
-    "    \"\"\"\n",
-    "    Remove English stopwords from a list of strings.\n",
+    "def remove_stopwords(words):\n",
+    "    \n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    processed_words = [word for word in words if word.lower() not in stop_words]\n",
+    "    \n",
+    "    return processed_words\n",
     "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
+    "processed_text = remove_stopwords(stemmed_and_lemmatized_text)\n",
     "\n",
-    "    Returns:\n",
-    "        A list of strings after stop words are removed.\n",
-    "    \"\"\""
+    "print(processed_text)"
    ]
   },
   {
@@ -204,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
